# rsfm

./: Cargo.toml  LICENSE  flake.nix  rust-toolchain.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  components.rs  config.rs  main.rs  utils.rs
src/components/: button.rs  dock.rs  sidebar.rs
src/components/dock/: dir_view.rs  sidebar.rs
src/utils/: fs.rs  icons.rs  paths.rs  theme.rs
