[workspace]
members = ["macros"]

[package]
name = "rsfm"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]
license-file = "LICENSE"

[dependencies]
macros = { path = "macros" }
catppuccin-egui = "3.1.0"
dirs = "5.0.1"
eframe = { version = "0.22.0", features = ["wgpu", "wayland", "persistence"] }
egui-modal = "0.2.4"
egui-phosphor = "0.2.0"
egui_dock = "0.7.3"
egui_extras = { version = "0.22.0", features = ["svg"] }
egui_grid = "0.2.0"
egui_tracing = "0.2.1"
lazy_static = "1.4.0"
opener = "0.6.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.4.0"
toml = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
clap = { version = "4.4.6", features = ["derive"] }
paste = "1.0.14"
