[workspace]
members = ["macros"]

[package]
name = "rsfm"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]
license-file = "LICENSE"

[dependencies]
macros = { path = "macros" }
catppuccin-egui = { git = "https://github.com/catppuccin/egui.git" }
dirs = "5.0"
eframe = { version = "0.23", features = ["wgpu", "wayland", "persistence"] }
egui-modal = "0.2"
egui-phosphor = "0.3"
egui_extras = { version = "0.23", features = ["svg"] }
egui_grid = "0.3"
egui_tracing = { git = "https://github.com/zakarumych/egui_tracing.git" }
egui_dock = "0.8"
lazy_static = "1.4"
opener = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
miette = { version = "5.10", features = ["fancy"] }
clap = { version = "4.4", features = ["derive"] }
paste = "1.0"
egui_memory_editor = "0.2.6"
egui_code_editor = "0.1.8"
alacritty_terminal = "0.19.1"
